--- a/HWpy231212/index.html
+++ b/HWpy231212/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+    <h1>Hello</h1>
+    <h2>One</h2>
+    <h3>Wi</h3>
+    <h4>world</h4>
+    <h5>ert</h5>
+    <h6>T</h6>
     <div class="table">
         <table>
             <tr>
@@ -39,6 +48,7 @@
             </tr>
         </table>
     </div>
-    
+
 </body>
+
 </html>
